<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_business"
        android:icon="@drawable/ic_list"
        android:title="@string/business_list" />


    <item
        android:id="@+id/navigation_space"
        android:title="" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/notifications" />

    <item
        android:id="@+id/navigation_me"
        android:icon="@drawable/ic_person"
        android:title="@string/me" />

</menu>
